--- a/scripts/aws_dynamodb/generate_dynamodb_cf/requirements.txt
+++ b/scripts/aws_dynamodb/generate_dynamodb_cf/requirements.txt
@@ -1,1 +1,8 @@
+boto3==1.34.155
+botocore==1.34.155
+jmespath==1.0.1
+python-dateutil==2.9.0.post0
 PyYAML==6.0.1
+s3transfer==0.10.2
+six==1.16.0
+urllib3==2.2.2
