Fix the GenericSuite dependencies verification in "big_lambdas_manager.sh" to abort the execution if there are local dependencies [FA-169]. Fix missing "g++" running docker build in "big_lambdas_manager.sh", adding "RUN yum -y groupinstall 'Development Tools'" to the "Dockerfile-big-lambda-AL2" [FA-169]. Fix the error "The image manifest, config or layer media type for the source image xx.dkr.ecr.us-east-1.amazonaws.com/xxx:version is not supported" running docker build in "big_lambdas_manager.sh", adding `--provenance=false` to stop BuiltKit from generating said manifest [FA-169].

--- a/scripts/aws_big_lambda/Dockerfile-big-lambda-AL2
+++ b/scripts/aws_big_lambda/Dockerfile-big-lambda-AL2
@@ -13,9 +13,12 @@ RUN yum -y upgrade
     # https://github.com/docker/compose/issues/8105
     # https://github.com/pyca/cryptography/blob/main/docs/installation.rst#alpine
 
+# Install gcc, g++ and other development tools
+RUN yum -y groupinstall 'Development Tools'
+
 RUN yum -y install \
     libxslt-devel libxml2-devel \
-    redhat-rpm-config gcc libffi-devel python3-devel openssl-devel cargo pkg-config \
+    redhat-rpm-config libffi-devel python3-devel openssl-devel cargo pkg-config \
     git
 
 # To avoid: "The extension's directory "/opt/extensions" does not exist, assuming no extensions to be loaded."
