run_aws.sh validates that CURRENT_FRAMEWORK is Chalice for "run", "deploy", "create_stack", "describe_stack", "delete_app", "delete_stack" commands [GS-15].

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ dump/
 
 node_modules
 
+# Chalice
 chalicelib/bin
 chalicelib/include
 chalicelib/lib
@@ -39,14 +40,14 @@ chalicelib/src
 .chalice/venv/
 .chalice/deployed/
 .chalice/config.json
+.chalice/deployment/deployment.zip
+.chalice/deployment/sam.json
+.chalice/policy-*.json
 
 # Editor
 .vscode
 .idea
 .python-version
-.chalice/deployment/deployment.zip
-.chalice/deployment/sam.json
-.chalice/policy-*.json
 
 # SSL Certificates used by the API webserver
 *.pem
