Fix "run_aws.sh" to assign the correct AWS Stack Name and avoid the error "An error occurred (ValidationError) when calling the DescribeStacks operation: 1 validation error detected: Value '${APP_NAME_LOWERCASE}-be-stack' at 'stackName' failed to satisfy constraint: Member must satisfy regular expression pattern: [a-zA-Z][-a-zA-Z0-9]*|arn:[-a-zA-Z0-9:/._+]*" [GS-137]. Fix ".chalice/config_example.json" to remove the API_GATEWAY_STAGE_placeholder from the "api_gateway_stage" attribute and assign the correct value, and remove unused attributes in the QA stage [FA-248].

--- a/.chalice/config-example.json
+++ b/.chalice/config-example.json
@@ -25,7 +25,7 @@
   },
   "stages": {
     "dev": {
-      "api_gateway_stage": "API_GATEWAY_STAGE_placeholder",
+      "api_gateway_stage": "dev",
       "environment_variables": {
         "APP_DEBUG": "APP_DEBUG_placeholder",
         "APP_STAGE": "dev",
@@ -36,14 +36,7 @@
       }
     },
     "qa": {
-      "api_gateway_stage": "API_GATEWAY_STAGE_placeholder",
-      "autogen_policy": false,
-      "iam_role_arn": "arn:aws:iam::071141316464:role/chalice-api-dev-api_handler",
-      "manage_iam_role": false,
-      "certificate_arn": "",
-      "certificate_arn_key": "",
-      "certificate_path": "./app.APP_NAME_LOWERCASE_placeholder.local.crt",
-      "private_key_path": "./app.APP_NAME_LOWERCASE_placeholder.local.key",
+      "api_gateway_stage": "qa",
       "environment_variables": {
         "PORT": "5001",
         "APP_DEBUG": "APP_DEBUG_placeholder",
@@ -55,7 +48,7 @@
       }
     },
     "prod": {
-      "api_gateway_stage": "API_GATEWAY_STAGE_placeholder",
+      "api_gateway_stage": "prod",
       "environment_variables": {
         "APP_DEBUG": "0",
         "APP_STAGE": "prod",
