Add: configurable backend port using the envvar BACKEND_LOCAL_PORT to the "sls" (secure local server) [GS-137]

--- a/scripts/secure_local_server/docker-compose.yml
+++ b/scripts/secure_local_server/docker-compose.yml
@@ -25,11 +25,13 @@ services:
     ports:
       # - "80:80"
       # - "443:443"
-      - "5001:443"
-      - "5002:80"
+      # - "5001:443"
+      # - "5002:80"
+      - "${BACKEND_LOCAL_PORT}:443"
     expose:
-      - 5001
-      - 5002
+      # - 5001
+      # - 5002
+      - "${BACKEND_LOCAL_PORT}"
     environment:
       - APP_NAME_LOWERCASE=${APP_NAME_LOWERCASE}
     volumes:
